--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,9 @@ jobs:
           name: Run Tests
           command: make test
       - persist_to_workspace:
-          root: ..
+          root: .
           paths:
-            - fitglue
+            - .
 
   deploy:
     parameters:
@@ -65,7 +65,7 @@ jobs:
       tag: "1.5.7"
     steps:
       - attach_workspace:
-          at: ..
+          at: .
       - terraform/init:
           path: ./terraform
       - run:
