--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,11 +77,13 @@ jobs:
 
             # Configure credential config for Workload Identity
             gcloud iam workload-identity-pools create-cred-config \
-              projects/911679924866/locations/global/workloadIdentityPools/circleci-pool/providers/circleci-provider \
+              "projects/911679924866/locations/global/workloadIdentityPools/circleci-pool/providers/circleci-provider" \
               --service-account=circleci-deployer@fitglue-server-dev.iam.gserviceaccount.com \
               --output-file=/tmp/gcp_cred_config.json \
-              --credential-source-file=/tmp/oidc_token.txt \
-              --credential-source-type=text
+              --credential-source-file=/tmp/oidc_token.txt
+
+            # Authenticate with GCP using the credential config
+            gcloud auth login --brief --cred-file=/tmp/gcp_cred_config.json
 
             # Set credentials for terraform
             export GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp_cred_config.json
