fix(ci): install curl and dependencies for gcp-cli setup on Alpine
- Use apk to install curl, bash, python3, py3-pip
- Required for gcp-cli orb to install SDK on Alpine executor

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,9 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run:
+          name: Install Dependencies (Alpine)
+          command: apk add --no-cache curl bash python3 py3-pip
       - gcp-cli/setup:
           version: latest
       - run:
