--- a/src/typescript/hevy-handler/package.json
+++ b/src/typescript/hevy-handler/package.json
@@ -20,6 +20,7 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
+    "@fitglue/shared": "^1.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "concurrently": "^8.0.0",
