--- a/src/typescript/keiser-poller/package.json
+++ b/src/typescript/keiser-poller/package.json
@@ -21,6 +21,7 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
+    "@fitglue/shared": "^1.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "concurrently": "^8.0.0",
