--- a/src/typescript/keiser-poller/tsconfig.json
+++ b/src/typescript/keiser-poller/tsconfig.json
@@ -6,7 +6,9 @@
     "outDir": "build",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
   "compileOnSave": true,
   "include": [
