fix: ci deploy config (buildable env and gcp-build script)

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -5,6 +5,10 @@
     "keiser-poller",
     "shared"
   ],
+  "scripts": {
+    "build": "npm run build --workspaces --if-present",
+    "gcp-build": "npm run build"
+  },
   "devDependencies": {
     "ts-proto": "^2.10.0"
   }
