--- a/src/typescript/shared/package.json
+++ b/src/typescript/shared/package.json
@@ -16,13 +16,13 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
     "jest": "^30.2.0",
-    "ts-jest": "^29.4.6",
-    "typescript": "^5.9.3"
+    "ts-jest": "^29.4.6"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^4.0.1",
     "@google-cloud/secret-manager": "^6.1.1",
     "firebase-admin": "^13.6.0",
-    "winston": "^3.19.0"
+    "winston": "^3.19.0",
+    "typescript": "^5.9.3"
   }
 }
