--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,9 @@ jobs:
       - run:
           name: Run Tests
           command: make test
+      - run:
+          name: Prepare for deployment
+          command: make prepare
       - persist_to_workspace:
           root: .
           paths:
