feat: attempting integration tests with actual live projects

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ HEVY_SIGNING_SECRET=local-hevy-secret
 
 # Configuration
 # PORTS are defined in scripts/local_run.sh but can be overridden if the scripts support it.
+
+# Integration Tests
+# Options: local (default), dev, test, prod
+TEST_ENVIRONMENT=local
