--- a/src/typescript/hevy-handler/package.json
+++ b/src/typescript/hevy-handler/package.json
@@ -23,9 +23,14 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/lru-cache": "^7.10.9",
     "@types/node": "^20.0.0",
     "concurrently": "^8.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6"
+  },
+  "overrides": {
+    "lru-cache": "^6.0.0",
+    "@types/node": "^20.0.0"
   }
 }
