--- a/src/typescript/keiser-poller/package.json
+++ b/src/typescript/keiser-poller/package.json
@@ -13,20 +13,25 @@
   },
   "dependencies": {
     "@bufbuild/protobuf": "^2.10.2",
+    "@fitglue/shared": "^1.0.0",
     "@google-cloud/functions-framework": "^3.0.0",
     "@google-cloud/pubsub": "^4.0.0",
     "@google-cloud/secret-manager": "^5.0.0",
     "firebase-admin": "^11.8.0",
     "google-auth-library": "^8.9.0",
     "typescript": "^5.0.0",
-    "winston": "^3.19.0",
-    "@fitglue/shared": "^1.0.0"
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/lru-cache": "^7.10.9",
     "@types/node": "^20.0.0",
     "concurrently": "^8.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6"
+  },
+  "overrides": {
+    "lru-cache": "^6.0.0",
+    "@types/node": "^20.0.0"
   }
 }
