--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -3,7 +3,8 @@
   "workspaces": [
     "hevy-handler",
     "keiser-poller",
-    "shared"
+    "shared",
+    "admin-cli"
   ],
   "scripts": {
     "build": "npm run build --workspaces --if-present",
@@ -11,5 +12,10 @@
   },
   "devDependencies": {
     "ts-proto": "^2.10.0"
+  },
+  "overrides": {
+    "lru-cache": "^6.0.0",
+    "@types/glob": "^7.2.0",
+    "@types/rimraf": "^3.0.2"
   }
 }
