feat: Configure Jest for `admin-cli` tests and add Firebase Admin SDK and `res.set` mocks to OAuth handler tests.

--- a/src/typescript/admin-cli/package.json
+++ b/src/typescript/admin-cli/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "echo 'No tests yet' && exit 0",
+    "test": "jest --passWithNoTests",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts"
   },
