feat: Implement Fitbit data ingestion service and expand API schema for health metrics

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -6,7 +6,9 @@
     "shared",
     "admin-cli",
     "strava-oauth-handler",
-    "fitbit-oauth-handler"
+    "fitbit-oauth-handler",
+    "fitbit-webhook-handler",
+    "fitbit-ingest"
   ],
   "scripts": {
     "build": "npm run build --workspaces --if-present",
