refactor: Centralize TypeScript build, test, and lint operations using npm workspaces, remove an unused import, and reorder a Terraform resource.

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -11,7 +11,7 @@
     "fitbit-ingest"
   ],
   "scripts": {
-    "build": "npm run build --workspaces --if-present",
+    "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
     "gcp-build": "npm run build"
   },
   "devDependencies": {
