test: Add Jest configuration and initial tests for fitbit-ingest, auth-hooks, and admin-cli modules.

--- a/src/typescript/fitbit-ingest/package.json
+++ b/src/typescript/fitbit-ingest/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf dist",
     "gcp-build": "npm run build",
     "lint": "eslint src --ext .ts",
-    "test": "jest --passWithNoTests"
+    "test": "jest"
   },
   "dependencies": {
     "@fitglue/shared": "^1.0.0",
