--- a/src/typescript/waitlist-handler/package.json
+++ b/src/typescript/waitlist-handler/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.0.0",
+    "@fitglue/shared": "^1.0.0",
     "firebase-admin": "^13.6.0",
     "typescript": "^5.0.0"
   },
