--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -8,7 +8,8 @@
     "fitbit-oauth-handler",
     "fitbit-handler",
     "auth-hooks",
-    "waitlist-handler"
+    "waitlist-handler",
+    "mcp-server"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
