--- a/src/typescript/admin-cli/package.json
+++ b/src/typescript/admin-cli/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fitglue/shared": "^1.0.0",
+    "axios": "^1.6.0",
     "commander": "^11.1.0",
     "firebase-admin": "^13.6.0",
     "inquirer": "^8.2.6"
