feat: Implement pending user input functionality with new enricher providers and a dedicated input handler service.

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -9,7 +9,8 @@
     "fitbit-handler",
     "auth-hooks",
     "waitlist-handler",
-    "mcp-server"
+    "mcp-server",
+    "inputs-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
