--- a/src/typescript/admin-cli/package.json
+++ b/src/typescript/admin-cli/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fitglue/shared": "^1.0.0",
+    "@google-cloud/pubsub": "^5.2.0",
     "axios": "^1.6.0",
     "commander": "^11.1.0",
     "firebase-admin": "^13.6.0",
@@ -21,13 +22,13 @@
   },
   "devDependencies": {
     "@types/inquirer": "^8.2.10",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
-    "typescript": "^5.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "@types/jest": "^29.5.12"
+    "typescript": "^5.0.0"
   }
 }
