feat: implement mock testing framework Introduces a complete end-to-end mock testing framework for the activity processing pipeline, enabling safe development and testing without external API dependencies. Key Changes: - **Mock Source**: Added `mock-source-handler` (TS) compliant with the connector pattern to generate synthetic activities (Run, Ride, Weight Training). - **Mock Enricher**: Added [MockProvider](cci:2://file:///home/ripixel/dev/fitglue/server/src/go/pkg/enricher_providers/mock/mock.go:16:0-16:26) (Go) to the enricher service, supporting configurable behaviors (success, failure, lag). - **Mock Destination**: Added `mock-uploader` (Go) Cloud Function to simulate successful activity uploads. - **Core Logic**: Refactored Router and Orchestrator to use strict [Destination](cci:1://file:///home/ripixel/dev/fitglue/server/src/typescript/shared/src/domain/services/user.ts:176:4-182:5) enums instead of string literals. - **Admin CLI**: Updated `users:add-pipeline` and `users:replace-pipeline` to support `DESTINATION_MOCK` and `SOURCE_TEST`. - **Infrastructure**: Added Terraform configuration for dev-only deployment of mock functions and topics (`topic-job-upload-mock`).

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -11,7 +11,8 @@
     "waitlist-handler",
     "mcp-server",
     "inputs-handler",
-    "activities-handler"
+    "activities-handler",
+    "mock-source-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
