fix: use workspaces for new functions

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -12,7 +12,10 @@
     "mcp-server",
     "inputs-handler",
     "activities-handler",
-    "mock-source-handler"
+    "mock-source-handler",
+    "user-profile-handler",
+    "user-integrations-handler",
+    "user-pipelines-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
