--- a/src/typescript/registry-handler/package.json
+++ b/src/typescript/registry-handler/package.json
@@ -17,8 +17,11 @@
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
-    "concurrently": "^8.0.0"
+    "concurrently": "^8.0.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6"
   },
   "overrides": {
     "@types/node": "^20.0.0"
