--- a/src/typescript/integration-request-handler/tsconfig.json
+++ b/src/typescript/integration-request-handler/tsconfig.json
@@ -1,8 +1,15 @@
 {
-  "extends": "../../../tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES2020",
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
