--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "firebase-admin": "^13.6.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
+    "ts-morph": "^27.0.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0"
   }
