--- a/src/typescript/billing-handler/package.json
+++ b/src/typescript/billing-handler/package.json
@@ -4,7 +4,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest --passWithNoTests"
+    "test": "jest"
   },
   "dependencies": {
     "@fitglue/shared": "v1",
