feat: add combined version control between web and server

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
           root: .
           paths:
             - .
+
   deploy:
     parameters:
       target:
@@ -109,6 +110,90 @@ jobs:
             export GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp_cred_config.json
             terraform -chdir=terraform apply -auto-approve -lock-timeout=20m -var-file="envs/<< parameters.target >>.tfvars"
 
+  create-release:
+    executor: unified-executor
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:cUKA/E5A8K5EjJz/VKyxf0jO8gNJ4ynE2j+BEKEi0Y0"
+      - run:
+          name: Setup Git User
+          command: |
+            git config --global user.email "ci@fitglue.tech"
+            git config --global user.name "CircleCI Bot"
+      - restore_cache:
+          keys:
+            - npm-root-v1-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install Dependencies
+          command: npm ci
+      - save_cache:
+          key: npm-root-v1-{{ checksum "package-lock.json" }}
+          paths:
+            - ~/.npm
+            - node_modules
+      - run:
+          name: Run Standard Version
+          command: |
+            COMMIT_MSG=$(git log -1 --pretty=%B)
+            if echo "$COMMIT_MSG" | grep -q "\[skip release\]"; then
+              echo "Skipping release due to [skip release] in commit message"
+              exit 0
+            fi
+
+            # Check if main has moved on since this pipeline started
+            git fetch origin main
+            LOCAL_HEAD=$(git rev-parse HEAD)
+            REMOTE_HEAD=$(git rev-parse origin/main)
+            if [ "$LOCAL_HEAD" != "$REMOTE_HEAD" ]; then
+              echo "ERROR: main branch has newer commits since this pipeline started."
+              echo "This release is now stale. The newer commits will go through their own pipeline."
+              exit 1
+            fi
+
+            npm run release
+            git push --follow-tags origin main
+      - run:
+          name: Update Central Version in GCS
+          command: |
+            VERSION=$(node -p "require('./package.json').version")
+            echo '{"version":"'$VERSION'","lastBumpBy":"server","lastUpdated":"'$(date -Iseconds)'","serverCommit":"'$CIRCLE_SHA1'"}' > /tmp/version.json
+
+            # Install gcloud
+            curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-linux-x86_64.tar.gz
+            tar -xf google-cloud-cli-linux-x86_64.tar.gz
+            ./google-cloud-sdk/install.sh --quiet
+            export PATH=$PATH:$(pwd)/google-cloud-sdk/bin
+
+            # Auth with OIDC (prod project)
+            echo $CIRCLE_OIDC_TOKEN > /tmp/oidc_token.txt
+            gcloud iam workload-identity-pools create-cred-config \
+              "projects/605889586984/locations/global/workloadIdentityPools/circleci-pool/providers/circleci-provider" \
+              --service-account=circleci-deployer@fitglue-server-prod.iam.gserviceaccount.com \
+              --output-file=/tmp/gcp_cred_config.json \
+              --credential-source-file=/tmp/oidc_token.txt
+            gcloud auth login --brief --cred-file=/tmp/gcp_cred_config.json
+
+            # Upload version.json
+            gcloud storage cp /tmp/version.json gs://fitglue-server-prod-version-config/version.json
+            echo "Updated central version to $VERSION"
+      - run:
+          name: Trigger Web Rebuild
+          command: |
+            VERSION=$(node -p "require('./package.json').version")
+            # Trigger web rebuild - web will fetch server version from GCS
+            curl -X POST "https://circleci.com/api/v2/project/github/FitGlue/web/pipeline" \
+              -H "Circle-Token: ${CIRCLECI_API_TOKEN}" \
+              -H "Content-Type: application/json" \
+              -d '{
+                "branch": "main",
+                "parameters": {
+                  "triggered_by_server": true
+                }
+              }'
+            echo "Triggered web rebuild (server version $VERSION now in GCS)"
+
 workflows:
   version: 2
   pipeline:
@@ -133,9 +218,15 @@ workflows:
           type: approval
           requires:
             - deploy-test
+      - create-release:
+          requires:
+            - approve-prod
+          filters:
+            branches:
+              only: main
       - deploy:
           name: deploy-prod
           target: prod
           project_number: "605889586984"
           requires:
-            - approve-prod
+            - create-release
