--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,15 +219,15 @@ workflows:
           type: approval
           requires:
             - deploy-test
-      - create-release:
-          requires:
-            - approve-prod
-          filters:
-            branches:
-              only: main
       - deploy:
           name: deploy-prod
           target: prod
           project_number: "605889586984"
           requires:
-            - create-release
+            - approve-prod
+          filters:
+            branches:
+              only: main
+      - create-release:
+          requires:
+            - deploy-prod
