feat: Add a new showcase handler cloud function to serve public activity data and viewer redirects.

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -19,7 +19,8 @@
     "registry-handler",
     "integration-request-handler",
     "mobile-sync-handler",
-    "billing-handler"
+    "billing-handler",
+    "showcase-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
