--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -20,7 +20,8 @@
     "integration-request-handler",
     "mobile-sync-handler",
     "billing-handler",
-    "showcase-handler"
+    "showcase-handler",
+    "file-upload-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
