feat: Introduce unit tests for mock and integration handlers, configure Jest, and refine linting rules with error configurations.

--- a/src/typescript/integration-request-handler/package.json
+++ b/src/typescript/integration-request-handler/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint 'src/**/*.ts'",
+    "test": "jest",
     "pack": "npm run build && cp package.json dist/"
   },
   "dependencies": {
