--- a/src/typescript/mock-source-handler/package.json
+++ b/src/typescript/mock-source-handler/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    "test": "jest"
   },
   "dependencies": {
     "@fitglue/shared": "1.0.0",
