--- a/src/typescript/showcase-handler/package.json
+++ b/src/typescript/showcase-handler/package.json
@@ -4,7 +4,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest --passWithNoTests"
+    "test": "jest"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.3.0",
