--- a/src/typescript/hevy-handler/package.json
+++ b/src/typescript/hevy-handler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hevy-webhook-handler",
+  "name": "hevy-handler",
   "version": "1.0.0",
   "description": "Ingests Hevy workout webhooks",
   "main": "build/index.js",
