--- a/src/typescript/repost-handler/package.json
+++ b/src/typescript/repost-handler/package.json
@@ -12,15 +12,16 @@
     "dev": "concurrently \"tsc -w\" \"functions-framework --target=repostHandler\""
   },
   "dependencies": {
+    "@fitglue/shared": "^1.0.0",
     "@google-cloud/functions-framework": "^3.0.0",
     "@google-cloud/pubsub": "^4.0.0",
-    "@fitglue/shared": "^1.0.0",
     "firebase-admin": "^13.6.0",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
+    "@types/uuid": "^10.0.0",
     "concurrently": "^8.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6"
