feat!: strava source and changes to user mappings

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -21,7 +21,8 @@
     "billing-handler",
     "showcase-handler",
     "repost-handler",
-    "admin-handler"
+    "admin-handler",
+    "strava-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
