feat!: comprehensive 2026 feature expansion and core architecture updates
BREAKING CHANGE: Updated Database interface to include Personal Records methods and modified Protobuf definitions for integrations.

- Added new Activity Enrichers:
  - Personal Records (Cardio/Strength tracking)
  - Training Load (TRIMP calculation)
  - Spotify Tracks integration
  - Weather (Open-Meteo)
  - Elevation Summary
  - Location Naming (Reverse Geocoding)
- Implemented new Integrations:
  - Spotify (OAuth and Auth monitoring)
  - TrainingPeaks (Uploader and OAuth)
- Updated core infrastructure:
  - Extended Database interface with Firestore persistence for PRs
  - Modified Protobuf schemas for User and Events
  - Configured Terraform for new Cloud Functions and secrets
- Improved shared TypeScript utilities and registry

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -5,6 +5,7 @@
     "shared",
     "admin-cli",
     "strava-oauth-handler",
+    "spotify-oauth-handler",
     "fitbit-oauth-handler",
     "fitbit-handler",
     "auth-hooks",
@@ -22,7 +23,8 @@
     "showcase-handler",
     "repost-handler",
     "admin-handler",
-    "strava-handler"
+    "strava-handler",
+    "trainingpeaks-oauth-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
