feat(server)!: major integration expansion and rich asset overhaul
This commit introduces major architectural expansions to the FitGlue platform, including new source and destination integrations, a suite of rich asset enrichers, and enhanced Strava synchronization capabilities.

Integrations & Infrastructure:
- Added Polaris, Wahoo, and Oura Ring source integrations with OAuth support.
- Implemented Intervals.icu source and destination uploader.
- Added Google Sheets destination uploader.
- Massive expansion of the Plugin Registry to support 50+ integrations with high-fidelity SVG icons and enhanced metadata (Category, SortOrder, Popularity).
- Updated Protobuf schemas (user, plugin, events, activity) to support new enricher types and synchronization states.
- Enhanced Terraform configuration with new OAuth handlers, secrets management, and storage buckets.

Enrichers & Rich Assets:
- Implemented AI Activity Banner enricher using Vertex AI (Imagen).
- Implemented Muscle Heatmap Image enricher generating SVG anatomical diagrams.
- Implemented Route Thumbnail enricher for static GPS map generation.
- Added Standardized Asset Delivery pattern with environment-aware vanity URLs.

Strava Enhancements:
- Implemented [handleStravaUpdate](cci:1://file:///home/ripixel/dev/fitglue/server/src/go/functions/strava-uploader/function.go:305:0-443:1) for modifying existing activities (Resume Mode).
- Added [uploadPhotosToStrava](cci:1://file:///home/ripixel/dev/fitglue/server/src/go/functions/strava-uploader/function.go:507:0-602:1) to automatically upload enriched assets (Heatmaps, Banners) as photos to Strava activities.

BREAKING CHANGE: Protobuf enum updates for EnricherProviderType and DestinationType require re-generation of clients and database migrations for existing records.

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -7,6 +7,7 @@
     "strava-oauth-handler",
     "spotify-oauth-handler",
     "fitbit-oauth-handler",
+    "google-oauth-handler",
     "fitbit-handler",
     "auth-hooks",
     "mcp-server",
@@ -24,7 +25,13 @@
     "repost-handler",
     "admin-handler",
     "strava-handler",
-    "trainingpeaks-oauth-handler"
+    "trainingpeaks-oauth-handler",
+    "wahoo-oauth-handler",
+    "wahoo-handler",
+    "oura-oauth-handler",
+    "oura-handler",
+    "polar-oauth-handler",
+    "polar-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
