--- a/src/typescript/user-integrations-handler/package.json
+++ b/src/typescript/user-integrations-handler/package.json
@@ -2,7 +2,7 @@
   "name": "user-integrations-handler",
   "version": "1.0.0",
   "description": "Handles user integration management (list, connect, disconnect)",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "gcp-build": "npm run build",
