--- a/src/typescript/wahoo-handler/package.json
+++ b/src/typescript/wahoo-handler/package.json
@@ -2,7 +2,7 @@
   "name": "wahoo-handler",
   "version": "1.0.0",
   "description": "Wahoo webhook handler for activity ingestion",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "gcp-build": "npm run build",
