--- a/src/typescript/admin-handler/tsconfig.json
+++ b/src/typescript/admin-handler/tsconfig.json
@@ -1,9 +1,18 @@
 {
-  "extends": "../shared/tsconfig.json",
   "compilerOptions": {
-    "outDir": "./build",
-    "rootDir": "./src"
+    "module": "commonjs",
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "outDir": "dist",
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2017",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "build"]
+  "compileOnSave": true,
+  "include": [
+    "src"
+  ]
 }
