--- a/src/typescript/billing-handler/package.json
+++ b/src/typescript/billing-handler/package.json
@@ -1,7 +1,7 @@
 {
   "name": "billing-handler",
   "version": "1.0.0",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "jest"
