--- a/src/typescript/integration-request-handler/package.json
+++ b/src/typescript/integration-request-handler/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint 'src/**/*.ts'",
+    "lint": "eslint src --ext .ts",
     "test": "jest",
     "pack": "npm run build && cp package.json dist/"
   },
