--- a/src/typescript/integration-request-handler/tsconfig.json
+++ b/src/typescript/integration-request-handler/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "ES2020",
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "outDir": "dist",
+    "sourceMap": true,
     "strict": true,
+    "target": "es2017",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "declaration": true,
-    "resolveJsonModule": true
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "compileOnSave": true,
+  "include": [
+    "src"
+  ]
 }
