--- a/src/typescript/polar-handler/package.json
+++ b/src/typescript/polar-handler/package.json
@@ -2,7 +2,7 @@
   "name": "polar-handler",
   "version": "1.0.0",
   "description": "Polar Flow webhook handler with transaction-based API",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "gcp-build": "npm run build",
