--- a/src/typescript/registry-handler/package.json
+++ b/src/typescript/registry-handler/package.json
@@ -2,7 +2,7 @@
   "name": "registry-handler",
   "version": "1.0.0",
   "description": "Returns the FitGlue registry (connections and plugins)",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "gcp-build": "npm run build",
