--- a/src/typescript/repost-handler/package.json
+++ b/src/typescript/repost-handler/package.json
@@ -2,7 +2,7 @@
   "name": "repost-handler",
   "version": "1.0.0",
   "description": "Handles re-post mechanisms for synchronized activities",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "gcp-build": "npm run build",
