--- a/src/typescript/strava-handler/package.json
+++ b/src/typescript/strava-handler/package.json
@@ -2,7 +2,7 @@
   "name": "strava-handler",
   "version": "1.0.0",
   "description": "Strava webhook handler for activity ingestion",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "gcp-build": "npm run build",
