refactor: migrate pipelines to sub-collection and standardize monorepo infrastructure
This commit implements a major structural refactor to the user data model and
standardizes the build and linting infrastructure across the entire server project.

Core Changes:
- Pipeline Sub-collection Migration:
  - Updated user.proto to deprecate the inline 'pipelines' field in UserRecord.
  - Implemented pipeline-store.ts for managing pipelines as a separate sub-collection.
  - Updated Firestore converters and user-store in both Go and TypeScript to
    support the new hierarchical data structure, improving scalability.

- Infrastructure & Tooling (Zero-Debt Convergence):
  - Standardized all TypeScript handlers and libraries to use 'dist/' as the
    unified build output directory, fixing module resolution and CI/CD source map issues (Rule T52).
  - Updated package.json, tsconfig.json, and jest.config.js across 20+ packages.
  - Significantly expanded scripts/lint-codebase.ts to enforce strict monorepo
    coding standards (Rules T26-T57).

- Framework & Handler Improvements:
  - Refactored admin-handler and billing-handler to utilize declarative
    routing (routeRequest) and FrameworkHandler pattern.
  - Overhauled billing-handler with modular Stripe sub-handlers for checkout,
    webhooks, and portal.
  - Updated webhook-processor and various OAuth handlers for enhanced type safety.

- Go Backend Updates:
  - Synchronized Go types with the latest proto definitions.
  - Updated Go Firestore storage logic to accommodate the sub-collection migration.

Files: 72 modified, 1 new (pipeline-store.ts)
Rules: Complies with T25, T52, T30, and the Zero-Debt Convergence standard.

--- a/src/typescript/auth-hooks/package.json
+++ b/src/typescript/auth-hooks/package.json
@@ -7,14 +7,16 @@
     "watch": "tsc -w",
     "clean": "rm -rf build",
     "lint": "eslint src --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "gcp-build": "npm run build"
   },
   "dependencies": {
     "@fitglue/shared": "^1.0.0",
     "@google-cloud/functions-framework": "^3.3.0",
     "cloudevents": "^8.0.0",
     "firebase-admin": "^13.6.0",
-    "firebase-functions": "^6.0.0"
+    "firebase-functions": "^6.0.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
