--- a/src/typescript/admin-handler/package.json
+++ b/src/typescript/admin-handler/package.json
@@ -22,7 +22,8 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "jest": "^30.2.0",
-    "ts-jest": "^29.4.6"
+    "ts-jest": "^29.4.6",
+    "eslint": "^8.0.0"
   },
   "overrides": {
     "@types/node": "^20.0.0"
