--- a/src/typescript/billing-handler/package.json
+++ b/src/typescript/billing-handler/package.json
@@ -4,16 +4,22 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "gcp-build": "npm run build",
+    "lint": "eslint src --ext .ts"
   },
   "dependencies": {
-    "@fitglue/shared": "v1",
+    "@fitglue/shared": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
-    "stripe": "^14.0.0"
+    "stripe": "^14.0.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6"
   }
 }
