--- a/src/typescript/inputs-handler/package.json
+++ b/src/typescript/inputs-handler/package.json
@@ -25,7 +25,8 @@
     "@types/node": "^20.0.0",
     "concurrently": "^8.0.0",
     "jest": "^30.2.0",
-    "ts-jest": "^29.4.6"
+    "ts-jest": "^29.4.6",
+    "eslint": "^8.0.0"
   },
   "overrides": {
     "@types/node": "^20.0.0"
