--- a/src/typescript/mock-source-handler/package.json
+++ b/src/typescript/mock-source-handler/package.json
@@ -6,16 +6,21 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "lint": "eslint src --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "gcp-build": "npm run build"
   },
   "dependencies": {
-    "@fitglue/shared": "1.0.0",
+    "@fitglue/shared": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "eslint": "^8.0.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6"
   }
 }
