--- a/src/typescript/oura-oauth-handler/package.json
+++ b/src/typescript/oura-oauth-handler/package.json
@@ -4,13 +4,14 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "gcp-build": "tsc",
+    "gcp-build": "npm run build",
     "lint": "eslint src --ext .ts",
     "test": "jest"
   },
   "dependencies": {
     "@fitglue/shared": "^1.0.0",
-    "@google-cloud/functions-framework": "^3.1.0"
+    "@google-cloud/functions-framework": "^3.1.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
