--- a/src/typescript/showcase-handler/package.json
+++ b/src/typescript/showcase-handler/package.json
@@ -4,19 +4,24 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "gcp-build": "npm run build",
+    "lint": "eslint src --ext .ts"
   },
   "dependencies": {
-    "@fitglue/shared": "*",
+    "@fitglue/shared": "^1.0.0",
     "@google-cloud/functions-framework": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.0",
     "jest": "^29.7.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "eslint": "^8.0.0",
+    "ts-jest": "^29.4.6"
   }
 }
