--- a/src/typescript/showcase-handler/tsconfig.json
+++ b/src/typescript/showcase-handler/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020"],
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "outDir": "dist",
-    "rootDir": "./src",
+    "sourceMap": true,
     "strict": true,
+    "target": "es2017",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "build"]
+  "compileOnSave": true,
+  "include": [
+    "src"
+  ]
 }
