--- a/src/typescript/user-integrations-handler/package.json
+++ b/src/typescript/user-integrations-handler/package.json
@@ -14,14 +14,16 @@
     "@google-cloud/functions-framework": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
-    "firebase-admin": "^13.6.0"
+    "firebase-admin": "^13.6.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "eslint": "^8.0.0"
   },
   "overrides": {
     "@types/node": "^20.0.0"
